# BE/server.js
@@ -19,6 +19,7 @@ const discountRouter = require("./routes/discountRoutes")
 const cartRouter = require("./routes/cartRoutes")
 const publicCategoryRouter = require("./routes/publicCategoryRoutes")
 const checkoutRouter = require("./routes/checkoutRoutes")
+const adminRouter = require("./routes/adminRoutes")
 
 const notFoundMiddleware = require("./middleware/not-found")
 const errorHandlerMiddleware = require("./middleware/error-handler")
@@ -59,6 +60,7 @@ app.use("/api/v1/discounts", discountRouter)
 app.use("/api/v1/cart", cartRouter)
 app.use("/api/v1/public/categories", publicCategoryRouter)
 app.use("/api/v1/checkout", checkoutRouter)
+app.use("/api/v1/admin", adminRouter)
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
 app.use(notFoundMiddleware)
